# pitrac-light

./: .gitignore  BUILD_SYSTEM.md  CONFIG_MIGRATION_AUDIT.md  DEVELOPER_QUICKSTART.md  LICENSE  LICENSE_POLICY.md  NOTICE  PiTrac.sln  README.md
.github/: CODEOWNER  markdown-link-check-config.json
.github/workflows/: ci.yml  release-cli.yml  release-pitrac.yml
LICENSES/: BSD-2-Clause.txt
assets/: module-dependencies.dot
assets/diagram/: architecture-overview.puml  calibration-flow-camera1.puml  calibration-flow-camera2.puml  camera-startup-race-condition.puml  data-flow-overview.puml  golf-simulator-ball-hit-flow.puml  hardware-topology.puml  module-dependencies.puml
cmd/pitrac-cli/: README.md  go.mod  main.go
cmd/pitrac-cli/cmd/: doctor.go  env.go  envfile.go  run.go  ui.go  validate.go  version_test.go
docs/: DEPENDENCIES.md  OPENCV_4.12_UPGRADE.md  module-dependencies.dot
hooks/: README.md  install.sh  pre-commit
pitrac-cli/: README.md  go.mod  main.go  pitrac-cli  spin_analysis_coarse.csv  spin_analysis_fine.csv
pitrac-cli/cmd/: build.go  camera_preflight.go  config.go  config_test.go  doctor.go  env.go  envfile.go  envfile_test.go  install.go  install_clean.go  root.go  run.go  service.go  service_test.go  ui.go  ui_test.go  validate.go  vars.go  vars_test.go  version.go  version_test.go
pitrac_cal/: README.md  __main__.py  camera.py  cli.py  config_manager.py  constants.py  display.py  extrinsic.py  intrinsic.py  requirements.txt
pitrac_cal/tests/: test_config.py  test_extrinsic.py  test_intrinsic.py
scripts/: README.md  analyze_dependencies.py
src/: .create_closed_source_objects.sh.swp  EllipseDetectorCommon.cpp  EllipseDetectorYaed.cpp  PiTrac.vcxproj  PiTrac.vcxproj.filters  ball_image_proc.cpp  ball_image_proc.h  ball_watcher.cpp  camera_hardware.h  configuration_manager.cpp  golf_ball.cpp  golf_sim_config.json  gs_calibration.h  gs_camera.h  gs_club_data.cpp  gs_clubs.cpp  gs_config.cpp  gs_events.cpp  gs_fsm.cpp  gs_ipc_control_msg.cpp  gs_ipc_control_msg.h  gs_ipc_mat.cpp  gs_ipc_mat.h  gs_ipc_message.cpp  gs_ipc_message.h  gs_ipc_result.cpp  gs_ipc_result.h  gs_ipc_system.cpp  gs_ipc_test.cpp  gs_ipc_test.h  gs_message_consumer.cpp  gs_message_consumer.h  gs_message_producer.cpp  gs_message_producer.h  gs_options.cpp  gs_options.h  gs_results.cpp  gs_results.h  gs_test.cpp.B4_NEW_TEST  gs_ui_system.cpp  (+12 more)
src/Camera/: MIGRATION_GUIDE.md  README.md
src/ImageAnalysis/: DEMO_SCRIPT.md  README.md
src/RunScripts/: runAutoCalibrateCam1.sh  runAutoCalibrateCam2.sh  runAutomatedTesting.sh  runCam1.sh  runCam1BallLocation.sh  runCam1Calibration.sh  runCam1ExternalStrobe.sh  runCam1SinglePi.sh  runCam1Still.sh  runCam1StillSinglePi.sh  runCam1Test.sh  runCam2.sh  runCam2BallLocation.sh  runCam2Calibration.sh  runCam2ForAutoCalibration.sh  runCam2ForPi1Processing.sh  runCam2SinglePi.sh  runCam2Still.sh  runPiTracCommon.sh  runPulseTest.sh  runShutdown.sh  runTestExternalSimMessage.sh  runTestGsProServer.sh  runTestImages.sh  runTestResults.sh  runTestSpin.sh
src/RunScripts/SinglePi/: runAutoCalibrateCam1_SinglePi.sh  runAutoCalibrateCam2_SinglePi.sh  runCam1BallLocationSinglePi.sh  runCam1ExternalStrobe.sh  runCam1SinglePi.sh  runCam1StillSinglePi.sh  runCam2BallLocationSinglePi.sh  runCam2ForPi1Processing.sh  runCam2SinglePi.sh  runCam2StillSinglePi.sh  runPulseTest.sh  runTestImages.sh
src/ball_detection/: README.md  ball_detector_facade.cpp  ball_detector_facade.h  color_filter.cpp  color_filter.h  ellipse_detector.cpp  ellipse_detector.h  hough_detector.cpp  hough_detector.h  meson.build  roi_manager.cpp  roi_manager.h  search_strategy.cpp  search_strategy.h  spin_analyzer.cpp  spin_analyzer.h
src/core/: libcamera_span_compat.hpp  options.cpp  rpicam_app.cpp  rpicam_app.hpp
src/image/: image.hpp
src/post_processing_stages/: motion_detect_stage.cpp
src/preview/: preview.hpp
src/sim/: README.md
src/sim/common/: gs_sim_interface.cpp  gs_sim_interface.h  gs_sim_socket_interface.cpp  gs_sim_socket_interface.h
src/sim/gspro/: gs_gspro_interface.cpp  gs_gspro_interface.h  gs_gspro_response.cpp  gs_gspro_response.h  gs_gspro_results.cpp  gs_gspro_results.h  gs_gspro_test_server.cpp  gs_gspro_test_server.h
src/tests/: README.md  meson.build  test_utilities.hpp
src/tests/unit/: test_calibration.cpp  test_cv_utils.cpp  test_fsm_transitions.cpp  test_ipc_serialization.cpp
src/utils/: logging_tools.cpp  meson.build  version.py
