# Ball detection module - extracted from ball_image_proc.cpp
# Phase 3.1: Modular refactoring

ball_detection_sources = files(
    'spin_analyzer.cpp',
    'color_filter.cpp',
    'roi_manager.cpp',
    'hough_detector.cpp',
    'ellipse_detector.cpp',
    'search_strategy.cpp',
    'ball_detector_facade.cpp',
)
