# SPDX-License-Identifier: GPL-2.0-only
#
# Copyright (C) 2022-2025, Verdant Consultants, LLC.
#

utils_sources = [
    'cv_utils.cpp',
    'logging_tools.cpp',
]

utils_lib = static_library('utils',
    utils_sources,
    include_directories : pitrac_lm_include_dirs,
    dependencies : pitrac_lm_module_deps)
